Avoid immutable error in ItemSequenceBinding